tests/snapshots/examples_basics/hash_basic.snap
---
source: tests/examples_basics_snapshots.rs
---
Fixture: examples/basics/hash_basic.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/hash_basic.flx:11:1
   |
11 | print(h["a"]);
   | ^^^^^^^^^^^^^^
   | -------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/basics/hash_basic.flx:11:1
   |
11 | print(h["a"]);
   | ^^^^^^^^^^^^^^
   | -------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/hash_basic.flx:12:1
   |
12 | print(h["b"]);
   | ^^^^^^^^^^^^^^
   | -------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/hash_basic.flx:13:1
   |
13 | print(h["c"]);
   | ^^^^^^^^^^^^^^
   | -------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/hash_basic.flx:17:1
   |
17 | print(nums[1]);
   | ^^^^^^^^^^^^^^^
   | --------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/hash_basic.flx:18:1
   |
18 | print(nums[2]);
   | ^^^^^^^^^^^^^^^
   | --------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.

Found 6 errors.
== stdout ==
<not executed>
