tests/snapshots/examples_basics/if_else.snap
---
source: tests/examples_basics_snapshots.rs
---
Fixture: examples/basics/if_else.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/if_else.flx:10:1
   |
10 | if true {
   | ^^^^^^^^^
11 |     print("yes");
   | ^^^^^^^^^^^^^^^^^
12 | };
   | ^^

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/basics/if_else.flx:10:1
   |
10 | if true {
   | ^^^^^^^^^
11 |     print("yes");
   | ^^^^^^^^^^^^^^^^^
12 | };
   | ^^

Hint:
  Define `fn main() with ... { ... }` and move execution there.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/if_else.flx:14:1
   |
14 | if false {
   | ^^^^^^^^^^
15 |     print("should not print");
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
16 | } else {
   | ^^^^^^^^
17 |     print("no");
   | ^^^^^^^^^^^^^^^^
18 | };
   | ^^

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/if_else.flx:22:1
   |
22 | if x > 0 {
   | ^^^^^^^^^^
23 |     print("positive");
   | ^^^^^^^^^^^^^^^^^^^^^^
24 | } else {
   | ^^^^^^^^
25 |     print("negative");
   | ^^^^^^^^^^^^^^^^^^^^^^
26 | };
   | ^^

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/if_else.flx:31:1
   |
31 | if a == b {
   | ^^^^^^^^^^^
32 |     print("equal");
   | ^^^^^^^^^^^^^^^^^^^
33 | } else {
   | ^^^^^^^^
34 |     print("not equal");
   | ^^^^^^^^^^^^^^^^^^^^^^^
35 | };
   | ^^

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/if_else.flx:39:1
   |
39 | print(result);
   | ^^^^^^^^^^^^^^
   | -------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.

Found 6 errors.
== stdout ==
<not executed>
