tests/snapshots/examples_basics/math_builtins.snap
---
source: tests/examples_basics_snapshots.rs
---
Fixture: examples/basics/math_base_functions.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
