tests/snapshots/examples_basics/non_zero_division.snap
---
source: tests/examples_basics_snapshots.rs
---
Fixture: examples/basics/non_zero_division.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
