tests/snapshots/examples_basics/record_patterns.snap
---
source: tests/examples_basics_snapshots.rs
---
Fixture: examples/basics/record_patterns.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
