tests/snapshots/examples_basics/record_punning.snap
---
source: tests/examples_basics_snapshots.rs
---
Fixture: examples/basics/record_punning.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
